full css and html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
    <header>
+    <div class="container">
     <a href="./index.html" class="header-logo"><img src="./images/header-logo.png" alt="header-logo" class="header-img"></a>
     <nav class="header-nav">
         <ul class="header-list">
@@ -22,39 +23,46 @@
             <li class="header-item"><a href="#" class="header-link">Contact Us</a></li>
         </ul>
     </nav>
+    </div>
    </header> 
    <main>
     <!-- секція герой -->
     <section class="hero">
+        <div class="container">
      <h1 class="hero-title">Let's Create Your Dream Interior</h1>
      <p class="hero-text">The world needs innovators and problem solvers who turn</p>
      <p class="hero-desc">challenges into greater opportunities.</p>
      <button type="button" class="hero-btn">Get Started</button>
+    </div>
     </section>
     <!-- секція дизайн -->
     <section class="desing">
+        <div class="container">
         <ul class="desing-list"> 
             <li class="desing-item">
                 <h2 class="desing-title">Interior Design</h2>
                 <p class="desing-desc">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
-                <p>View More</p>
-                <img src="./images/arrow.png" alt="arrow">
+                <a href="#" class="desing-link">View More</a>
+                <img src="./images/arrow.png" alt="arrow" class="desing-img">
             </li>
             <li class="desing-item">
                 <h2 class="desing-title">Furniture</h2>
                 <p class="desing-desc">Movable articles that are used to make a room or building suitable for living or working.</p>
-                <p>View More</p>
-                <img src="./images/arrow.png" alt="arrow">
+                <a href="#" class="desing-link">View More</a>
+                <img src="./images/arrow.png" alt="arrow" class="desing-img">
             </li>
             <li class="desing-item">
                 <h2 class="desing-title">Flooring</h2>
                 <p class="desing-desc">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
-                <p>View More</p>
-                <img src="./images/arrow.png" alt="arrow">
+                <a href="#" class="desing-link">View More</a>
+                <img src="./images/arrow.png" alt="arrow" class="desing-img">
             </li>
         </ul>
+    </div>
     </section>
+    <!-- секція снасть -->
     <section class="tacle">
+        <div class="container">
        <h2 class="tacle-title">We Tackle The Most Challenging Designs</h2>
        <p class="tacle-text">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have</p>
        <p class="tacle-desc">an insatiable curiosity about transformative trends challenging the status.</p>
@@ -71,8 +79,11 @@
     </li>
    </ul>
    <button type="button" class="tecle-btn">Get Free Estimate</button>
+</div>
     </section>
+    <!-- секція картки -->
     <section class="card">
+        <div class="container">
         <h2 class="card-title">What the People Thinks About Interno</h2>
         <ul class="card-list">
             <li class="card-item">
@@ -94,8 +105,11 @@
                 <p class="card-desc">They balanced the architectural vision and the project realities beautifully.</p>
             </li>
         </ul>
+        </div>
     </section>
+    <!-- секція логотипи -->
     <section class="logo">
+        <div class="container">
         <ul class="logo-list">
             <li class="logo-item"><img src="./images/logo-home.png" alt="logo-home" class="logo-img"></li>
             <li class="logo-item"><img src="./images/logo-vs.png" alt="logo-vs" class="logo-img"></li>
@@ -103,15 +117,129 @@
             <li class="logo-item"><img src="./images/logo-nature.png" alt="logo-nature" class="logo-img"></li>
             <li class="logo-item"><img src="./images/logo-classic.png" alt="logo-classic" class="logo-img"></li>
         </ul>
+        </div>
     </section>
+    <!-- секція останній -->
     <section class="reccent">
 <h2 class="reccent-title">Recent Projects</h2>
 <p class="reccent-text">With tools to make every part of your process more human and a support team</p>
 <p class="reccent-desc">excited to help you, getting started with us never been easier.</p>
     </section>
-    <section>
-        
+    <section class="room">
+        <div class="container">
+        <ul class="room-list">
+            <li class="room-item">
+                <img src="./images/photo-room.jpg" alt="photo-room">
+                <h2 class="room-title">Winery Dry Creek Building</h2>
+                <p class="room-desc">Art Modern</p>
+            </li>
+            <li class="room-item">
+                <img src="./images/photo-table.jpg" alt="photo-table">
+                <h2 class="room-title">Creative Workplace Design</h2>
+                <p class="room-desc">Minimalist</p>
+            </li>
+            <li class="room-item">
+                <img src="./images/photo-nightstand.jpg" alt="photo-nightstand">
+                <h2 class="room-title">Bedroom Interior Pot Work</h2>
+                <p class="room-desc">Modern</p>
+            </li>
+            <li class="room-item">
+                <img src="./images/photo-bedroom.png" alt="photo-bedroom">
+                <h2 class="room-title">Light Ambience Sepia Design</h2>
+                <p class="room-desc">Scandinavian</p>
+            </li>
+        </ul>
+        </div>
+    </section>
+    <!-- секція цифри -->
+    <section class="numbers">
+        <div class="container">
+<ul class="numbers-list">
+    <li class="numbers-item">
+        <h2 class="numbers-title">12</h2>
+        <p class="numbers-text">Years Of Experiance</p>
+    </li>
+    <div class="line"></div>
+    <li class="numbers-item">
+        <h2 class="numbers-title">5K</h2>
+        <p class="numbers-text">Success Project</p>
+    </li>
+    <div class="line"></div>
+    <li class="numbers-item">
+        <h2 class="numbers-title">1K</h2>
+        <p class="numbers-text">Active Project</p>
+    </li>
+    <div class="line"></div>
+    <li class="numbers-item">
+        <h2 class="numbers-title">4K</h2>
+        <p class="numbers-text">Happy Customers</p>
+    </li>
+</ul>
+</div>
+    </section>
+    <!-- секція блог -->
+    <section class="blogs">
+        <div class="container">
+<h2 class="blogs-title">Recent Blogs</h2>
+<p class="blogs-text">Get updates about our latest trends and techniques used in</p>
+<p class="blogs-desc">interior design project works.</p>
+</div>
+    </section>
+    <section class="letter">
+        <div class="container">
+        <ul class="letter-list">
+            <li class="letter-item">
+                <img src="./images/Kitchen-Design.jpg" alt="Kitchen-Design" class="letter-img">
+                <h2 class="letter-title">Residential Interior Designer In New York, USA</h2>
+                <p class="letter-text">November 23, 2021</p>
+            </li>
+            <li class="letter-item">
+                <img src="./images/Living-Room-three.jpg" alt="Living-Room-three" class="letter-img">
+                <h2 class="letter-title">How To Choose The Best Wall Art & Decor House?</h2>
+                <p class="letter-text">November 23, 2021</p>
+            </li>
+            <li class="letter-item">
+                <img src="./images/Minimalist-Interior-two.jpg" alt="Minimalist-Interior-two" class="letter-img">
+                <h2 class="letter-title">Tips To Increase The Interior Value Of Your House</h2>
+                <p class="letter-text">November 23, 2021</p>
+            </li>
+            <li class="letter-item">
+                <img src="./images/Living-Room-two.jpg" alt="Living-Room-two" class="letter-img">
+                <h2 class="letter-title">Best Solution For Any Office & Business Interior</h2>
+                <p class="letter-text">November 23, 2021</p>
+            </li>
+            <li class="letter-item">
+                <img src="./images/Living-Room.jpg" alt="Living-Room" class="letter-img">
+                <h2 class="letter-title">Get Solution For Building Construction Work</h2>
+                <p class="letter-text">November 23, 2021</p>
+            </li>
+            <li class="letter-item">
+                <img src="./images/Minimalist Interior.jpg" alt="Minimalist Interior" class="letter-img">
+                <h2 class="letter-title">Attain The Best Finish For The Kitchen Cabinets</h2>
+                <p class="letter-text">November 23, 2021</p>
+            </li>
+        </ul>
+        </div>
+    </section>
+    <!-- секція wanna -->
+    <section class="wanna">
+        <div class="container">
+        <h2 class="wanna-title">Wanna join the interno?</h2>
+        <p class="wanna-text">Contact Us & Get a Free Consultation</p>
+        <button type="button" class="wanna-btn">Connect With us</button>
+        </div>
     </section>
    </main>
+   <footer>
+    <div class="container">
+    <a href="./index.html"><img src="./images/header-logo.png" alt="footer-logo"></a>
+    <ul>
+        <li><a href="#"><img src="./images/facebook-logo.png" alt="facebook-logo"></a></li>
+        <li><a href="#"><img src="./images/x-logo.png" alt="x-logo"></a></li>
+        <li><a href="#"><img src="./images/in-logo.png" alt="in-logo"></a></li>
+        <li><a href="#"><img src="./images/instagram-logo.png" alt="instagram-logo"></a></li>
+    </ul>
+    </div>
+   </footer>
 </body>
 </html>
