--- a/index.html
+++ b/index.html
@@ -232,13 +232,32 @@
    </main>
    <footer>
     <div class="container">
-    <a href="./index.html"><img src="./images/header-logo.png" alt="footer-logo"></a>
-    <ul>
-        <li><a href="#"><img src="./images/facebook-logo.png" alt="facebook-logo"></a></li>
-        <li><a href="#"><img src="./images/x-logo.png" alt="x-logo"></a></li>
-        <li><a href="#"><img src="./images/in-logo.png" alt="in-logo"></a></li>
-        <li><a href="#"><img src="./images/instagram-logo.png" alt="instagram-logo"></a></li>
-    </ul>
+          <a href="./index.html" class="footer-link"><img src="./images/header-logo.png" alt="logo" class="footer-img"></a>
+           <p class="footer-desc">We are the leading architect and interior design firm in the world.</p>
+           <ul class="footer-list">
+            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/facebook-logo.png" alt="facebook-log" class="footer-logo"></a></li>
+            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/x-logo.png" alt="x-logo" class="footer-logo"></a></li>
+            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/in-logo.png" alt="in-logo" class="footer-logo"></a></li>
+            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/instagram-logo.png" alt="instagram-logo" class="footer-logo"></a></li>
+           </ul>
+           <ul class="footer-items">
+            <li class="footer-item">
+                <h2 class="footer-title">Pages</h2>
+            </li>
+            <li class="footer-item">
+                <h2 class="footer-title">Explore</h2>
+            </li>
+            <li class="footer-item">
+                <h2 class="footer-title">Contact</h2>
+            </li>
+           </ul>
+           <ul>
+            <li>
+                <h2>Pages</h2>
+            </li>
+            <li></li>
+            <li></li>
+           </ul>
     </div>
    </footer>
 </body>
