--- a/index.html
+++ b/index.html
@@ -95,24 +95,30 @@
     <!-- секція картки -->
     <section class="card">
         <div class="container">
-        <h2 class="card-title">What the People Thinks About Interno</h2>
+        <h2 class="card-title">What the People Thinks <span class="card-span">About Interno</span></h2>
         <ul class="card-list">
             <li class="card-item">
                 <img src="./images/lisa.png" alt="lisa" class="card-img">
+                <div class="card-box">
                 <h2  class="card-paragrah">Lisa Clairton</h2>
                 <p class="card-text">New York, USA</p>
+                </div>
                 <p class="card-desc">We selected Interno interior because of rigorous design background & education.</p>
             </li>
             <li class="card-item">
                 <img src="./images/david.png" alt="david" class="card-img">
+                <div class="card-box">
                 <h2  class="card-paragrah">David Knight</h2>
                 <p class="card-text">Sydney, Australia</p>
-                <p class="card_desc">The team exceeded our expectations and emerged as leaders of our project’s.</p>
+                </div>
+                <p class="card-desc">The team exceeded our expectations and emerged as leaders of our project’s.</p>
             </li>
             <li class="card-item">
                 <img src="./images/liza.png" alt="liza" class="card-img">
+                <div class="card-box">
                 <h2  class="card-paragrah">Lisa Clairton</h2>
                 <p class="card-text">Paris, France</p>
+                </div>
                 <p class="card-desc">They balanced the architectural vision and the project realities beautifully.</p>
             </li>
         </ul>
