--- a/index.html
+++ b/index.html
@@ -98,27 +98,33 @@
         <h2 class="card-title">What the People Thinks <span class="card-span">About Interno</span></h2>
         <ul class="card-list">
             <li class="card-item">
+                <div class="card-bax">
                 <img src="./images/lisa.png" alt="lisa" class="card-img">
                 <div class="card-box">
                 <h2  class="card-paragrah">Lisa Clairton</h2>
                 <p class="card-text">New York, USA</p>
                 </div>
+            </div>
                 <p class="card-desc">We selected Interno interior because of rigorous design background & education.</p>
             </li>
             <li class="card-item">
+                <div class="card-bax">
                 <img src="./images/david.png" alt="david" class="card-img">
                 <div class="card-box">
                 <h2  class="card-paragrah">David Knight</h2>
                 <p class="card-text">Sydney, Australia</p>
                 </div>
+            </div>
                 <p class="card-desc">The team exceeded our expectations and emerged as leaders of our project’s.</p>
             </li>
             <li class="card-item">
+                <div class="card-bax">
                 <img src="./images/liza.png" alt="liza" class="card-img">
                 <div class="card-box">
                 <h2  class="card-paragrah">Lisa Clairton</h2>
                 <p class="card-text">Paris, France</p>
                 </div>
+            </div>
                 <p class="card-desc">They balanced the architectural vision and the project realities beautifully.</p>
             </li>
         </ul>
@@ -147,23 +153,43 @@
         <ul class="room-list">
             <li class="room-item">
                 <img src="./images/photo-room.jpg" alt="photo-room">
+                <div class="room-box">
+                <div class="room-bax">
                 <h2 class="room-title">Winery Dry Creek Building</h2>
                 <p class="room-desc">Art Modern</p>
+            </div>
+                <button type="button" class="reccent-btn"><img src="./images/reccent-btn.png" alt="btn" class="reccent-img"></button>
+            </div>
             </li>
             <li class="room-item">
                 <img src="./images/photo-table.jpg" alt="photo-table">
-                <h2 class="room-title">Creative Workplace Design</h2>
-                <p class="room-desc">Minimalist</p>
-            </li>
+                <div class="room-box">
+                    <div class="room-bax">
+                    <h2 class="room-title">Creative Workplace Design</h2>
+                    <p class="room-desc">Minimalist</p>
+                </div>
+                    <button type="button" class="reccent-btn"><img src="./images/reccent-btn.png" alt="btn" class="reccent-img"></button>
+                </div>
+                </li>
             <li class="room-item">
                 <img src="./images/photo-nightstand.jpg" alt="photo-nightstand">
+                <div class="room-box">
+                <div class="room-bax">
                 <h2 class="room-title">Bedroom Interior Pot Work</h2>
                 <p class="room-desc">Modern</p>
+            </div>
+                <button type="button" class="reccent-btn"><img src="./images/reccent-btn.png" alt="btn" class="reccent-img"></button>
+                </div>
             </li>
             <li class="room-item">
                 <img src="./images/photo-bedroom.png" alt="photo-bedroom">
+                <div class="room-box">
+                <div class="room-bax">
                 <h2 class="room-title">Light Ambience Sepia Design</h2>
                 <p class="room-desc">Scandinavian</p>
+            </div>
+                <button type="button" class="reccent-btn"><img src="./images/reccent-btn.png" alt="btn" class="reccent-img"></button>
+                </div>
             </li>
         </ul>
         </div>
@@ -171,30 +197,22 @@
     <!-- секція цифри -->
     <section class="numbers">
         <div class="container">
-<ul class="numbers-list">
-    <li class="numbers-item">
-        <h2 class="numbers-title">12</h2>
-        <p class="numbers-text">Years Of Experiance</p>
-    </li>
-    <div class="line"></div>
-    <li class="numbers-item">
-        <h2 class="numbers-title">5K</h2>
-        <p class="numbers-text">Success Project</p>
-    </li>
-    <div class="line"></div>
-    <li class="numbers-item">
-        <h2 class="numbers-title">1K</h2>
-        <p class="numbers-text">Active Project</p>
-    </li>
-    <div class="line"></div>
-    <li class="numbers-item">
-        <h2 class="numbers-title">4K</h2>
-        <p class="numbers-text">Happy Customers</p>
-    </li>
-</ul>
-</div>
-    </section>
-    <!-- секція блог -->
+            <ul class="numbers-list">
+              <li class="numbers-item">
+                  <p class="numbers-text">12</p>
+                  <p class="numbers-desc">Years Of Experiance</p>
+              </li>
+              <li class="numbers-item">
+                  <p class="numbers-text">5K</p>
+                  <p class="numbers-desc">Success Project</p>
+              </li>
+              <li class="numbers-item">
+                  <p class="numbers-text">1K</p>
+                  <p class="numbers-desc">Active Project</p>
+              </li>
+              <li class="numbers-item">
+                  <p class="numbers-text">4K</p>
+                  <p class="numbers-desc">Happy C
     <section class="blogs">
         <div class="container">
 <h2 class="blogs-title">Recent Blogs</h2>
@@ -206,34 +224,34 @@
         <div class="container">
         <ul class="letter-list">
             <li class="letter-item">
-                <img src="./images/Kitchen-Design.jpg" alt="Kitchen-Design" class="letter-img">
                 <h2 class="letter-title">Residential Interior Designer In New York, USA</h2>
                 <p class="letter-text">November 23, 2021</p>
+                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
             </li>
             <li class="letter-item">
-                <img src="./images/Living-Room-three.jpg" alt="Living-Room-three" class="letter-img">
                 <h2 class="letter-title">How To Choose The Best Wall Art & Decor House?</h2>
                 <p class="letter-text">November 23, 2021</p>
+                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
             </li>
             <li class="letter-item">
-                <img src="./images/Minimalist-Interior-two.jpg" alt="Minimalist-Interior-two" class="letter-img">
                 <h2 class="letter-title">Tips To Increase The Interior Value Of Your House</h2>
                 <p class="letter-text">November 23, 2021</p>
+                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
             </li>
             <li class="letter-item">
-                <img src="./images/Living-Room-two.jpg" alt="Living-Room-two" class="letter-img">
                 <h2 class="letter-title">Best Solution For Any Office & Business Interior</h2>
                 <p class="letter-text">November 23, 2021</p>
+                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
             </li>
             <li class="letter-item">
-                <img src="./images/Living-Room.jpg" alt="Living-Room" class="letter-img">
                 <h2 class="letter-title">Get Solution For Building Construction Work</h2>
                 <p class="letter-text">November 23, 2021</p>
+                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
             </li>
             <li class="letter-item">
-                <img src="./images/Minimalist Interior.jpg" alt="Minimalist Interior" class="letter-img">
                 <h2 class="letter-title">Attain The Best Finish For The Kitchen Cabinets</h2>
                 <p class="letter-text">November 23, 2021</p>
+                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
             </li>
         </ul>
         </div>
