full section letter

--- a/index.html
+++ b/index.html
@@ -195,63 +195,85 @@
         </div>
     </section>
     <!-- секція цифри -->
-    <section class="numbers">
+    <section class="figure">
         <div class="container">
-            <ul class="numbers-list">
-              <li class="numbers-item">
-                  <p class="numbers-text">12</p>
-                  <p class="numbers-desc">Years Of Experiance</p>
-              </li>
-              <li class="numbers-item">
-                  <p class="numbers-text">5K</p>
-                  <p class="numbers-desc">Success Project</p>
-              </li>
-              <li class="numbers-item">
-                  <p class="numbers-text">1K</p>
-                  <p class="numbers-desc">Active Project</p>
-              </li>
-              <li class="numbers-item">
-                  <p class="numbers-text">4K</p>
-                  <p class="numbers-desc">Happy C
+          <ul class="figure-list">
+            <li class="figure-item">
+                <p class="figure-text">12</p>
+                <p class="figure-desk">Years Of Experiance</p>
+            </li>
+            <li class="figure-item">
+                <p class="figure-text">5K</p>
+                <p class="figure-desk">Success Project</p>
+            </li>
+            <li class="figure-item">
+                <p class="figure-text">1K</p>
+                <p class="figure-desk">Active Project</p>
+            </li>
+            <li class="figure-item">
+                <p class="figure-text">4K</p>
+                <p class="figure-desk">Happy Customers</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     <section class="blogs">
         <div class="container">
-<h2 class="blogs-title">Recent Blogs</h2>
-<p class="blogs-text">Get updates about our latest trends and techniques used in</p>
-<p class="blogs-desc">interior design project works.</p>
-</div>
+           <h2 class="blogs-title">Recent Blogs</h2>
+           <p class="blogs-text">Get updates about our latest trends and techniques used in</p>
+           <p class="blogs-desc">interior design project works.</p>
+           </div>
     </section>
     <section class="letter">
         <div class="container">
         <ul class="letter-list">
             <li class="letter-item">
+                <button type="button" class="letter-btn">Kitchen Desig</button>
                 <h2 class="letter-title">Residential Interior Designer In New York, USA</h2>
+                <div class="letter-box">
                 <p class="letter-text">November 23, 2021</p>
-                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                <button type="button" class="letter-button"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                </div>
             </li>
             <li class="letter-item">
+                <button type="button" class="letter-btn">Living Room</button>
                 <h2 class="letter-title">How To Choose The Best Wall Art & Decor House?</h2>
+                <div class="letter-box">
                 <p class="letter-text">November 23, 2021</p>
-                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                <button type="button" class="letter-button"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                </div>
             </li>
             <li class="letter-item">
+                <button type="button" class="letter-btn">Minimalist Interior</button>
                 <h2 class="letter-title">Tips To Increase The Interior Value Of Your House</h2>
+                <div class="letter-box">
                 <p class="letter-text">November 23, 2021</p>
-                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                <button type="button" class="letter-button"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                </div>
             </li>
             <li class="letter-item">
+                <button type="button" class="letter-btn">Minimalist Interior</button>
                 <h2 class="letter-title">Best Solution For Any Office & Business Interior</h2>
+                <div class="letter-box">
                 <p class="letter-text">November 23, 2021</p>
-                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                <button type="button" class="letter-button"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                </div>
             </li>
             <li class="letter-item">
+                <button type="button" class="letter-btn">Living Room</button>
                 <h2 class="letter-title">Get Solution For Building Construction Work</h2>
+                <div class="letter-box">
                 <p class="letter-text">November 23, 2021</p>
-                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                <button type="button" class="letter-button"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                </div>
             </li>
             <li class="letter-item">
+                <button type="button" class="letter-btn">Minimalist Interior</button>
                 <h2 class="letter-title">Attain The Best Finish For The Kitchen Cabinets</h2>
+                <div class="letter-box">
                 <p class="letter-text">November 23, 2021</p>
-                <button type="button" class="letter-btn"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                <button type="button" class="letter-button"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
+                </div>
             </li>
         </ul>
         </div>
@@ -261,11 +283,11 @@
         <div class="container">
         <h2 class="wanna-title">Wanna join the interno?</h2>
         <p class="wanna-text">Contact Us & Get a Free Consultation</p>
-        <button type="button" class="wanna-btn">Connect With us</button>
+        <button type="button" class="wanna-btn"><img src="./images/wanna-btn.png" alt="btn" class="wanna-photo"></button>
         </div>
     </section>
    </main>
-   <footer>
+   <footer class="footer">
     <div class="container">
           <a href="./index.html" class="footer-link"><img src="./images/header-logo.png" alt="logo" class="footer-img"></a>
            <p class="footer-desc">We are the leading architect and interior design firm in the world.</p>
@@ -305,7 +327,7 @@
                 </ul>
             </li>
          </ul>
-         <div>
+        </div>
             <p class="footer-text">Copyright &#169; Interno | Designed by <span class="footer-span">Victorflow</span> Templates - Powered by <span class="footer-span">Webflow</span></p>
          </div>
     </div>
