--- a/index.html
+++ b/index.html
@@ -288,48 +288,41 @@
     </section>
    </main>
    <footer class="footer">
-    <div class="container">
-          <a href="./index.html" class="footer-link"><img src="./images/header-logo.png" alt="logo" class="footer-img"></a>
-           <p class="footer-desc">We are the leading architect and interior design firm in the world.</p>
-           <ul class="footer-list">
-            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/facebook-logo.png" alt="facebook-log" class="footer-logo"></a></li>
-            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/x-logo.png" alt="x-logo" class="footer-logo"></a></li>
-            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/in-logo.png" alt="in-logo" class="footer-logo"></a></li>
-            <li class="footer-item"><a href="#" class="footer-link"><img src="./images/instagram-logo.png" alt="instagram-logo" class="footer-logo"></a></li>
-           </ul>
-         <ul class="footer-items">
-            <li>
-                <h2 class="footer-title">Pages</h2>
-                <ul class="footer-letter">
-                    <li class="footer-item"><a href="#" class="footer-a">Style Guide</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">Protected</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">Licenses</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">Changelog</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">404</a></li>
-                </ul>
-            </li>
-            <li>
-                <h2 class="footer-title">Explore</h2>
-                <ul class="footer-letter">
-                    <li class="footer-item"><a href="#" class="footer-a">About Us</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">Recent Blog</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">Pricing Plan</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">Our Projects</a></li>
-                    <li class="footer-item"><a href="#" class="footer-a">Contact Us</a></li>
-                </ul>
-            </li>
-            <li>
-                <h2 class="footer-title">Contact</h2>
-                <ul class="footer-letter">
-                    <li class="footer-item"><a href="#" class="footer-a">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</a></li>
-                    <li class="footer-item"><a href="mailto:contact@interno.com" class="footer-a">contact@interno.com</a></li>
-                    <li class="footer-item"><a href="tel:1234567890" class="footer-a">(123) 456 - 7890</a></li>
-                </ul>
-            </li>
-         </ul>
-        </div>
-            <p class="footer-text">Copyright &#169; Interno | Designed by <span class="footer-span">Victorflow</span> Templates - Powered by <span class="footer-span">Webflow</span></p>
-         </div>
+    <div class="container bax">
+        <div class="footer-bax">
+  <a href="./index.html" class="foter-link"><img src="./images/header-logo.png" alt="logo" class="footer-img"></a>
+  <p class="footer-text">We are the leading architect and interior design firm in the world.</p>
+  <div class="footer-box">
+      <a href="https://www.facebook.com/?locale=uk_UA" target="_blank" class="footer-a"><img src="./images/facebook-logo.png" alt="logo" class="footer-image"></a>
+      <a href="https://twitter.com/?lang=uk" target="_blank" class="footer-a"><img src="./images/x-logo.png" alt="logo" class="footer-image"></a>
+      <a href="https://ua.linkedin.com/" target="_blank" class="footer-a"><img src="./images/in-logo.png" alt="" class="footer-image"></a>
+      <a href="https://www.instagram.com/" target="_blank" class="footer-a"><img src="./images/instagram-logo.png" alt="logo" class="footer-image"></a>
+      </div>
+</div>
+<ul class="footer-list">
+    <li class="footer-item">
+        <h3 class="footer-title">Pages</h3>
+        <a href="#" class="list-link">Style Guide</a>
+        <a href="#" class="list-link">Protected</a>
+        <a href="#" class="list-link">Licenses</a>
+        <a href="#" class="list-link">Changelog</a>
+        <a href="#" class="list-link">404</a></li>
+    <li class="footer-item">
+        <h3 class="footer-title">Explore</h3>
+        <a href="#" class="list-link">About Us</a>
+        <a href="#" class="list-link">Recent Blog</a>
+        <a href="#" class="list-link">Pricing Plan</a>
+        <a href="#" class="list-link">Our Projects</a>
+        <a href="#" class="list-link">Contact Us</a>
+    </li>
+    <li class="footer-item">
+        <h3 class="footer-title">Contact</h3>
+        <a href="#" class="list-link">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</a><a href="mailto:contact@interno.com" class="list-link">contact@interno.com</a><a href="tel:1234567890" class="list-link">(123) 456 - 7890</a></li>
+</ul>
+    </div>
+    <div class="line"></div>
+    <div class="container bax">
+        <p class="footer-desc">Copyright &#169; Interno | Designed by <span class="footer-span">Victorflow</span> Templates - Powered by <span class="footer-span">Webflow</span></p>
     </div>
    </footer>
 </body>
