--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="container">
         <ul class="room-list">
             <li class="room-item">
-                <img src="./images/photo-room.jpg" alt="photo-room">
+                <img src="./images/photo-room.jpg" alt="photo-room" class="room-img">
                 <div class="room-box">
                 <div class="room-bax">
                 <h2 class="room-title">Winery Dry Creek Building</h2>
@@ -156,7 +156,7 @@
             </div>
             </li>
             <li class="room-item">
-                <img src="./images/photo-table.jpg" alt="photo-table">
+                <img src="./images/photo-table.jpg" alt="photo-table" class="room-img">
                 <div class="room-box">
                     <div class="room-bax">
                     <h2 class="room-title">Creative Workplace Design</h2>
@@ -166,7 +166,7 @@
                 </div>
                 </li>
             <li class="room-item">
-                <img src="./images/photo-nightstand.jpg" alt="photo-nightstand">
+                <img src="./images/photo-nightstand.jpg" alt="photo-nightstand" class="room-img">
                 <div class="room-box">
                 <div class="room-bax">
                 <h2 class="room-title">Bedroom Interior Pot Work</h2>
@@ -176,7 +176,7 @@
                 </div>
             </li>
             <li class="room-item">
-                <img src="./images/photo-bedroom.png" alt="photo-bedroom">
+                <img src="./images/photo-bedroom.png" alt="photo-bedroom" class="room-img">
                 <div class="room-box">
                 <div class="room-bax">
                 <h2 class="room-title">Light Ambience Sepia Design</h2>
@@ -271,6 +271,7 @@
         </ul>
         </div>
     </section>
+    <!-- секція wanna -->
     <section class="wanna">
         <div class="container">
         <h2 class="wanna-title">Wanna join the interno?</h2>
