--- a/index.html
+++ b/index.html
@@ -228,7 +228,6 @@
                 <button type="button" class="letter-button"><img src="./images/reccent-btn.png" alt="button" class="letter-img"></button>
                 </div>
             </li>
-            <!-- vcxhfxjcgvhj -->
             <li class="letter-item">
                 <button type="button" class="letter-btn">Living Room</button>
                 <h2 class="letter-title">How To Choose The Best Wall Art & Decor House?</h2>
@@ -272,7 +271,6 @@
         </ul>
         </div>
     </section>
-    <!-- секція wanna -->
     <section class="wanna">
         <div class="container">
         <h2 class="wanna-title">Wanna join the interno?</h2>
@@ -293,6 +291,7 @@
       <a href="https://www.instagram.com/" target="_blank" class="footer-a"><img src="./images/instagram-logo.png" alt="logo" class="footer-image"></a>
       </div>
 </div>
+
 <ul class="footer-list">
     <li class="footer-item">
         <h3 class="footer-title">Pages</h3>
@@ -313,6 +312,7 @@
         <h3 class="footer-title">Contact</h3>
         <a href="#" class="list-link">53, East Birchwood Ave. Brooklyn, New York 11201, USA.</a><a href="mailto:contact@interno.com" class="list-link">contact@interno.com</a><a href="tel:1234567890" class="list-link">(123) 456 - 7890</a></li>
 </ul>
+</div>
     </div>
     <div class="line"></div>
     <div class="container bax">
