--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </p>
           <div class="tacle-bax">
             <img src="./images/tacle-phone.png" alt="phone" class="tacle-images" />
-            <div class="bax">
+            <div class="bix">
               <a href="tel:012345678" class="tacle-link">012345678</a>
               <p class="tacle-p">Call Us Anytime</p>
             </div>
